css class container

--- a/index.html
+++ b/index.html
@@ -25,17 +25,19 @@
 
     <header class="main-navigation">
         <nav>
-            <!--logo-->
+            <div class="container">
+                <!--logo-->
 
-            <a class="logo link" href="./index.html">Web<span class="logo-span-header">Studio</span></a>
+                <a class="logo link" href="./index.html">Web<span class="logo-span-header">Studio</span></a>
 
-            <!--main navigation-->
+                <!--main navigation-->
 
-            <ul class="list">
-                <li><a class="link main-navigation-links" href="./index.html">Studio</a></li>
-                <li><a class="link main-navigation-links" href="./portfolio.html">Portfolio</a></li>
-                <li><a class="link main-navigation-links" href="">Contacts</a></li>
-            </ul>
+                <ul class="list">
+                    <li><a class="link main-navigation-links" href="./index.html">Studio</a></li>
+                    <li><a class="link main-navigation-links" href="./portfolio.html">Portfolio</a></li>
+                    <li><a class="link main-navigation-links" href="">Contacts</a></li>
+                </ul>
+            </div>
         </nav>
 
         <!--Phone & Mail-->
