--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home work #2</title>
+    <title>Home work #3</title>
 
     <link rel="stylesheet" href="./css/styles.css">
 
@@ -22,32 +22,29 @@
 </head>
 
 <body>
-
+    <!--main navigation-->
     <header class="main-navigation">
-        <nav>
-            <div class="container">
+        <div class="container flex-header">
+            <nav>
                 <!--logo-->
-
                 <a class="logo link" href="./index.html">Web<span class="logo-span-header">Studio</span></a>
 
-                <!--main navigation-->
-
-                <ul class="list">
+                <ul class="list flex-header">
                     <li><a class="link main-navigation-links" href="./index.html">Studio</a></li>
                     <li><a class="link main-navigation-links" href="./portfolio.html">Portfolio</a></li>
                     <li><a class="link main-navigation-links" href="">Contacts</a></li>
                 </ul>
-            </div>
-        </nav>
+            </nav>
 
-        <!--Phone & Mail-->
+            <!--Phone & Mail-->
 
-        <address class="contact">
-            <ul class="list">
-                <li><a class="link link-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link link-contact" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+            <address class="contact">
+                <ul class="list">
+                    <li><a class="link link-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="link link-contact" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
 
     <main>
