--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
 <body>
     <!--main navigation-->
-    <header class="main-navigation">
-        <div class="container flex-header">
-            <nav>
+    <header class="main-navigation header">
+        <div class="container menu-header">
+            <nav class="menu-header-navigation">
                 <!--logo-->
                 <a class="logo link" href="./index.html">Web<span class="logo-span-header">Studio</span></a>
 
@@ -50,6 +50,7 @@
     <main>
         <!--section-1-->
         <section class="hero">
+
             <h1 class="section-one">Effective Solutions
                 for Your Business </h1>
 
@@ -59,7 +60,7 @@
         </section>
 
         <!--section-2-->
-        <section>
+        <section class="container">
             <h2>Lorem</h2>
             <ul class="list">
                 <li>
@@ -96,7 +97,7 @@
         </section>
 
         <!--section-3-->
-        <section>
+        <section class="container">
             <h2 class="section-three-header">What are we doing</h2>
             <ul class="list">
                 <li>
@@ -115,7 +116,7 @@
         </section>
 
         <!--section-4-->
-        <section class="section-four-bg">
+        <section class="section-four-bg container">
             <h2 class="section-four-header">Our Team</h2>
             <ul class="list">
                 <li class="section-four-text-bg">
@@ -148,7 +149,7 @@
     </main>
 
 
-    <footer class="footer-background">
+    <footer class="footer-background container">
 
         <a class="logo link" href="./index.html"> Web<span class="logo-span-footer">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital
