--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <!--logo-->
                 <a class="logo link" href="./index.html">Web<span class="logo-span-header">Studio</span></a>
 
-                <ul class="list flex-header">
+                <ul class="list menu-header">
                     <li><a class="link main-navigation-links" href="./index.html">Studio</a></li>
                     <li><a class="link main-navigation-links" href="./portfolio.html">Portfolio</a></li>
                     <li><a class="link main-navigation-links" href="">Contacts</a></li>
@@ -49,14 +49,14 @@
 
     <main>
         <!--section-1-->
-        <section class="hero">
+        <section class="hero container">
+            <div class="">
+                <h1 class="section-one">Effective Solutions
+                    for Your Business </h1>
 
-            <h1 class="section-one">Effective Solutions
-                for Your Business </h1>
+                <button type="button" class="cursor button-text">Order Service</button>
 
-            <button type="button" class="cursor button-text">Order Service</button>
-
-
+            </div>
         </section>
 
         <!--section-2-->
