--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <!--main navigation-->
-    <header class="main-navigation header">
+    <header class="main-navigation">
         <div class="container menu-header">
             <nav class="menu-header-navigation">
                 <!--logo-->
@@ -49,8 +49,8 @@
 
     <main>
         <!--section-1-->
-        <section class="hero container">
-            <div class="">
+        <section class="hero">
+            <div class="container cosmos">
                 <h1 class="section-one">Effective Solutions
                     for Your Business </h1>
 
