--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <!--main navigation-->
     <header class="main-navigation">
-        <div class="container menu-header">
+        <div class="container menu-header header">
             <nav class="menu-header-navigation">
                 <!--logo-->
                 <a class="logo link" href="./index.html">Web<span class="logo-span-header">Studio</span></a>
@@ -39,7 +39,7 @@
             <!--Phone & Mail-->
 
             <address class="contact">
-                <ul class="list">
+                <ul class="list list-contact">
                     <li><a class="link link-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li><a class="link link-contact" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
