--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <main>
         <!--section-1-->
         <section class="hero">
-            <div class="container cosmos">
-                <h1 class="section-one">Effective Solutions
+            <div class="container">
+                <h1 class="section-one section-one-styling">Effective Solutions
                     for Your Business </h1>
 
                 <button type="button" class="cursor button-text">Order Service</button>
