--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <h1 class="section-one section-one-styling">Effective Solutions
                     for Your Business </h1>
 
-                <button type="button" class="cursor button-text">Order Service</button>
+                <button type="button" class="cursor button-text button-styling">Order Service</button>
 
             </div>
         </section>
