--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <main>
         <!--section-1-->
-        <section class="hero">
+        <section class="hero section">
             <div class="container">
                 <h1 class="section-one section-one-styling">Effective Solutions
                     for Your Business </h1>
@@ -61,11 +61,11 @@
         </section>
 
         <!--section-2-->
-        <section>
+        <section class="section">
             <h2 class="visually-hidden">Lorem</h2>
 
             <div class="container">
-                <ul class="list">
+                <ul class="list section-two-styling">
                     <li>
                         <h3 class="section-two">Strategy</h3>
                         <p class="section-two-text">Our goal is to identify the business problem to walk away with the
@@ -104,54 +104,59 @@
         </section>
 
         <!--section-3-->
-        <section class="container">
-            <h2 class="section-three-header">What are we doing</h2>
-            <ul class="list">
-                <li>
-                    <a class="link" href=""><img src="./images/What_are_we_doing/image1.jpg" alt="iMac" width="360"
-                            height="300"></a>
-                </li>
-                <li>
-                    <a class="link" href=""><img src="./images/What_are_we_doing/image2.jpg" alt="iPhone leyers"
-                            width="360" height="300"></a>
-                </li>
-                <li>
-                    <a class="link" href=""><img src="./images/What_are_we_doing/image3.jpg" alt="iPhone" width="360"
-                            height="300"></a>
-                </li>
-            </ul>
+        <section class="section section-tree-styling">
+            <div class="container">
+                <h2 class="section-three-header">What are we doing</h2>
+
+                <ul class="list">
+                    <li>
+                        <a class="link" href=""><img src="./images/What_are_we_doing/image1.jpg" alt="iMac" width="360"
+                                height="300"></a>
+                    </li>
+                    <li>
+                        <a class="link" href=""><img src="./images/What_are_we_doing/image2.jpg" alt="iPhone leyers"
+                                width="360" height="300"></a>
+                    </li>
+                    <li>
+                        <a class="link" href=""><img src="./images/What_are_we_doing/image3.jpg" alt="iPhone"
+                                width="360" height="300"></a>
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <!--section-4-->
-        <section class="section-four-bg container">
-            <h2 class="section-four-header">Our Team</h2>
-            <ul class="list">
-                <li class="section-four-text-bg">
-                    <img src="./images/Our_Team/Mark_Guerrero.jpg"
-                        alt="dark-haired man with facial hair in a blue business shirt" width="264" height="260">
-                    <h3 class="section-four-text">Mark Guerrero</h3>
-                    <p class="section-four-positions">Product Designer</p>
-                </li>
+        <section class="section-four-bg section">
+            <div class="container">
+                <h2 class="section-four-header">Our Team</h2>
+                <ul class="list">
+                    <li class="section-four-text-bg">
+                        <img src="./images/Our_Team/Mark_Guerrero.jpg"
+                            alt="dark-haired man with facial hair in a blue business shirt" width="264" height="260">
+                        <h3 class="section-four-text">Mark Guerrero</h3>
+                        <p class="section-four-positions">Product Designer</p>
+                    </li>
 
-                <li class="section-four-text-bg"><img src="./images/Our_Team/Tom_Ford.jpg"
-                        alt="red-haired man with light stubble in a blue casual shirt" width="264" height="260">
-                    <h3 class="section-four-text">Tom Ford</h3>
-                    <p class="section-four-positions">Frontend Developer</p>
-                </li>
+                    <li class="section-four-text-bg"><img src="./images/Our_Team/Tom_Ford.jpg"
+                            alt="red-haired man with light stubble in a blue casual shirt" width="264" height="260">
+                        <h3 class="section-four-text">Tom Ford</h3>
+                        <p class="section-four-positions">Frontend Developer</p>
+                    </li>
 
-                <li class="section-four-text-bg"><img src="./images/Our_Team/Camila_Garcia.jpg"
-                        alt="young woman with long hair in a pink sweater" width="264" height="260">
-                    <h3 class="section-four-text">Camila Garcia</h3>
-                    <p class="section-four-positions">Marketing</p>
-                </li>
+                    <li class="section-four-text-bg"><img src="./images/Our_Team/Camila_Garcia.jpg"
+                            alt="young woman with long hair in a pink sweater" width="264" height="260">
+                        <h3 class="section-four-text">Camila Garcia</h3>
+                        <p class="section-four-positions">Marketing</p>
+                    </li>
 
-                <li class="section-four-text-bg"><img src="./images/Our_Team/Daniel_Wilson.jpg"
-                        alt="young dark-haired man with facial hair in a gray T-shirt" width="264" height="260">
-                    <h3 class="section-four-text">Daniel Wilson</h3>
-                    <p class="section-four-positions"> UI Designer </p>
-                </li>
+                    <li class="section-four-text-bg"><img src="./images/Our_Team/Daniel_Wilson.jpg"
+                            alt="young dark-haired man with facial hair in a gray T-shirt" width="264" height="260">
+                        <h3 class="section-four-text">Daniel Wilson</h3>
+                        <p class="section-four-positions"> UI Designer </p>
+                    </li>
 
-            </ul>
+                </ul>
+            </div>
         </section>
     </main>
 
