--- a/index.html
+++ b/index.html
@@ -133,8 +133,10 @@
                     <li class="section-four-text-bg">
                         <img src="./images/Our_Team/Mark_Guerrero.jpg"
                             alt="dark-haired man with facial hair in a blue business shirt" width="264" height="260">
-                        <h3 class="section-four-text">Mark Guerrero</h3>
-                        <p class="section-four-positions">Product Designer</p>
+                        <div class="pictures-signatur">
+                            <h3 class="section-four-text">Mark Guerrero</h3>
+                            <p class="section-four-positions">Product Designer</p>
+                        </div>
                     </li>
 
                     <li class="section-four-text-bg"><img src="./images/Our_Team/Tom_Ford.jpg"
