--- a/index.html
+++ b/index.html
@@ -163,12 +163,12 @@
     </main>
 
 
-    <footer class="footer-background container">
-
-        <a class="logo link" href="./index.html"> Web<span class="logo-span-footer">Studio</span></a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital
-            marketing & growth solutions.</p>
-
+    <footer class="footer-background">
+        <div class="container">
+            <a class="logo link" href="./index.html"> Web<span class="logo-span-footer">Studio</span></a>
+            <p class="footer-text">Increase the flow of customers and sales for your business with digital
+                marketing & growth solutions.</p>
+        </div>
     </footer>
 
 </body>
