--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <section class="section-four-bg section">
             <div class="container">
                 <h2 class="section-four-header">Our Team</h2>
-                <ul class="list">
+                <ul class="list section-four-list-styling">
                     <li class="section-four-text-bg">
                         <img src="./images/Our_Team/Mark_Guerrero.jpg"
                             alt="dark-haired man with facial hair in a blue business shirt" width="264" height="260">
