--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
                 <ul class="list section-two-styling">
-                    <li>
+                    <li class="section-two-li">
                         <h3 class="section-two">Strategy</h3>
                         <p class="section-two-text">Our goal is to identify the business problem to walk away with the
                             perfect
