--- a/portfolio.html
+++ b/portfolio.html
@@ -26,28 +26,27 @@
 
 
     <header class="main-navigation">
-        <nav>
-            <!--logo-->
+        <div class="container menu-header header">
+            <nav class="menu-header-navigation">
+                <!--logo-->
+                <a class="logo link" href="./index.html">Web<span class="logo-span-header">Studio</span></a>
 
-            <a class="logo link" href="./index.html">Web<span class="logo-span-header">Studio</span></a>
+                <ul class="list menu-header">
+                    <li><a class="link main-navigation-links" href="./index.html">Studio</a></li>
+                    <li><a class="link main-navigation-links" href="./portfolio.html">Portfolio</a></li>
+                    <li><a class="link main-navigation-links" href="">Contacts</a></li>
+                </ul>
+            </nav>
 
-            <!--main navigation-->
+            <!--Phone & Mail-->
 
-            <ul class="list">
-                <li><a class="link main-navigation-links" href="./index.html">Studio</a></li>
-                <li><a class="link main-navigation-links" href="./portfolio.html">Portfolio</a></li>
-                <li><a class="link main-navigation-links" href="">Contacts</a></li>
-            </ul>
-        </nav>
-
-        <!--Phone & Mail-->
-
-        <address class="contact">
-            <ul class="list">
-                <li><a class="link link-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link link-contact" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+            <address class="contact">
+                <ul class="list list-contact">
+                    <li><a class="link link-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="link link-contact" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
 
     <main>
@@ -146,11 +145,11 @@
     <!-- logo -->
 
     <footer class="footer-background">
-
-        <a class="logo link" href="./index.html"> Web<span class="logo-span-footer">Studio</span></a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital
-            marketing & growth solutions.</p>
-
+        <div class="container">
+            <a class="logo link" href="./index.html"> Web<span class="logo-span-footer">Studio</span></a>
+            <p class="footer-text">Increase the flow of customers and sales for your business with digital
+                marketing & growth solutions.</p>
+        </div>
     </footer>
 
 </body>
