--- a/portfolio.html
+++ b/portfolio.html
@@ -26,27 +26,28 @@
 
 
     <header class="main-navigation">
-        <div class="container menu-header header">
-            <nav class="menu-header-navigation">
-                <!--logo-->
-                <a class="logo link" href="./index.html">Web<span class="logo-span-header">Studio</span></a>
+        <nav>
+            <!--logo-->
 
-                <ul class="list menu-header">
-                    <li><a class="link main-navigation-links" href="./index.html">Studio</a></li>
-                    <li><a class="link main-navigation-links" href="./portfolio.html">Portfolio</a></li>
-                    <li><a class="link main-navigation-links" href="">Contacts</a></li>
-                </ul>
-            </nav>
+            <a class="logo link" href="./index.html">Web<span class="logo-span-header">Studio</span></a>
 
-            <!--Phone & Mail-->
+            <!--main navigation-->
 
-            <address class="contact">
-                <ul class="list list-contact">
-                    <li><a class="link link-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="link link-contact" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-                </ul>
-            </address>
-        </div>
+            <ul class="list">
+                <li><a class="link main-navigation-links" href="./index.html">Studio</a></li>
+                <li><a class="link main-navigation-links" href="./portfolio.html">Portfolio</a></li>
+                <li><a class="link main-navigation-links" href="">Contacts</a></li>
+            </ul>
+        </nav>
+
+        <!--Phone & Mail-->
+
+        <address class="contact">
+            <ul class="list">
+                <li><a class="link link-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link link-contact" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
     </header>
 
     <main>
