--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <!--main navigation-->
-    <header class="main-navigation">
+    <header class="main-header">
         <div class="container menu-header header">
             <nav class="menu-header-navigation">
                 <!--logo-->
