--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="container">
                 <h2 class="section-three-header">What are we doing</h2>
 
-                <ul class="list">
+                <ul class="list section-tree-styling-ul">
                     <li>
                         <a class="link" href=""><img src="./images/What_are_we_doing/image1.jpg" alt="iMac" width="360"
                                 height="300"></a>
