--- a/index.html
+++ b/index.html
@@ -131,10 +131,12 @@
             <div class="container">
                 <h2 class="section-four-header">Our Team</h2>
                 <ul class="list section-four-list-styling">
+
                     <li class="section-four-text-bg">
                         <img src="./images/Our_Team/Mark_Guerrero.jpg"
                             alt="dark-haired man with facial hair in a blue business shirt" width="264" height="260">
                         <div class="pictures-signatur">
+
                             <h3 class="section-four-text">Mark Guerrero</h3>
                             <p class="section-four-positions">Product Designer</p>
                         </div>
@@ -142,20 +144,29 @@
 
                     <li class="section-four-text-bg"><img src="./images/Our_Team/Tom_Ford.jpg"
                             alt="red-haired man with light stubble in a blue casual shirt" width="264" height="260">
-                        <h3 class="section-four-text">Tom Ford</h3>
-                        <p class="section-four-positions">Frontend Developer</p>
+                        <div class="pictures-signature">
+
+                            <h3 class="section-four-text">Tom Ford</h3>
+                            <p class="section-four-positions">Frontend Developer</p>
+                        </div>
                     </li>
 
                     <li class="section-four-text-bg"><img src="./images/Our_Team/Camila_Garcia.jpg"
                             alt="young woman with long hair in a pink sweater" width="264" height="260">
-                        <h3 class="section-four-text">Camila Garcia</h3>
-                        <p class="section-four-positions">Marketing</p>
+                        <div class="pictures-signature">
+
+                            <h3 class="section-four-text">Camila Garcia</h3>
+                            <p class="section-four-positions">Marketing</p>
+                        </div>
                     </li>
 
                     <li class="section-four-text-bg"><img src="./images/Our_Team/Daniel_Wilson.jpg"
                             alt="young dark-haired man with facial hair in a gray T-shirt" width="264" height="260">
-                        <h3 class="section-four-text">Daniel Wilson</h3>
-                        <p class="section-four-positions"> UI Designer </p>
+                        <div class="pictures-signature">
+
+                            <h3 class="section-four-text">Daniel Wilson</h3>
+                            <p class="section-four-positions"> UI Designer </p>
+                        </div>
                     </li>
 
                 </ul>
