--- a/portfolio.html
+++ b/portfolio.html
@@ -50,95 +50,98 @@
     </header>
 
     <main>
-        <section>
-            <!-- buttons list -->
-            <h1>lorem</h1>
+        <section class="section-portfolio">
+            <div class="container">
 
-            <ul class="list">
-                <li><button type="button" class="cursor button-menu">All</button></li>
-                <li><button type="button" class="cursor button-menu">Web Site</button>
-                </li>
-                <li><button type="button" class="cursor button-menu">App</button></li>
-                <li><button type="button" class="cursor button-menu">Design</button>
-                </li>
-                <li><button type="button" class="cursor button-menu">Marketing</button>
-                </li>
-            </ul>
+                <!-- buttons list -->
 
+                <h1 class="visually-hidden">lorem</h1>
 
-
-
-
-            <!-- project list -->
+                <ul class="list button-list-styling">
+                    <li><button type="button" class="cursor button-menu button-portfolio-styling">All</button></li>
+                    <li><button type="button" class="cursor button-menu button-portfolio-styling">Web Site</button>
+                    </li>
+                    <li><button type="button" class="cursor button-menu button-portfolio-styling">App</button></li>
+                    <li><button type="button" class="cursor button-menu button-portfolio-styling">Design</button>
+                    </li>
+                    <li><button type="button" class="cursor button-menu button-portfolio-styling">Marketing</button>
+                    </li>
+                </ul>
 
 
 
-            <ul class="list">
-                <li>
-                    <a class="link" href="">
-                        <img src="./images/Portfolio/img1.jpg" alt="diferent banking pages" width="360" height="300">
-                        <h2 class="project-names">Banking App Interface Concept</h2>
-                        <p class="project-description">App</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href=""><img src="./images/Portfolio/img2.jpg" alt="celphone and terminal"
-                            width="360" height="300">
-                        <h2 class="project-names">Cashless Payment</h2>
-                        <p class="project-description">Marketing</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href=""><img src="./images/Portfolio/img3.jpg"
-                            alt="meditation app in laptop and celphone" width="360" height="300">
-                        <h2 class="project-names">Meditation App</h2>
-                        <p class="project-description">App</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href=""><img src="./images/Portfolio/img4.jpg" alt="taxi inside" width="360"
-                            height="300">
-                        <h2 class="project-names">Taxi Service</h2>
-                        <p class="project-description">Marketing</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href=""><img src="./images/Portfolio/img5.jpg" alt="graphics on celphones"
-                            width="360" height="300">
-                        <h2 class="project-names">Screen Illustrations</h2>
-                        <p class="project-description">Design</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href=""><img src="./images/Portfolio/img6.jpg"
-                            alt="young & happy woman in orange sweater" width="360" height="300">
-                        <h2 class="project-names">Online Courses</h2>
-                        <p class="project-description">Marketing</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href=""><img src="./images/Portfolio/img7.jpg"
-                            alt="diferent celphones with instagram Stories" width="360" height="300">
-                        <h2 class="project-names">Instagram Stories Concept</h2>
-                        <p class="project-description">Design</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href=""><img src="./images/Portfolio/img8.jpg" alt="a woman with shopping net"
-                            width="360" height="300">
-                        <h2 class="project-names">Organic Food</h2>
-                        <p class="project-description">Web Site</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href=""><img src="./images/Portfolio/img9.jpg" alt="a cup of Coffee with foamy milk"
-                            width="360" height="300">
-                        <h2 class="project-names">Fresh Coffee</h2>
-                        <p class="project-description">Web Site</p>
-                    </a>
-                </li>
-            </ul>
 
+
+                <!-- project list -->
+
+
+                <ul class="list">
+                    <li>
+                        <a class="link" href="">
+                            <img src="./images/Portfolio/img1.jpg" alt="diferent banking pages" width="360"
+                                height="300">
+                            <h2 class="project-names">Banking App Interface Concept</h2>
+                            <p class="project-description">App</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link" href=""><img src="./images/Portfolio/img2.jpg" alt="celphone and terminal"
+                                width="360" height="300">
+                            <h2 class="project-names">Cashless Payment</h2>
+                            <p class="project-description">Marketing</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link" href=""><img src="./images/Portfolio/img3.jpg"
+                                alt="meditation app in laptop and celphone" width="360" height="300">
+                            <h2 class="project-names">Meditation App</h2>
+                            <p class="project-description">App</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link" href=""><img src="./images/Portfolio/img4.jpg" alt="taxi inside" width="360"
+                                height="300">
+                            <h2 class="project-names">Taxi Service</h2>
+                            <p class="project-description">Marketing</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link" href=""><img src="./images/Portfolio/img5.jpg" alt="graphics on celphones"
+                                width="360" height="300">
+                            <h2 class="project-names">Screen Illustrations</h2>
+                            <p class="project-description">Design</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link" href=""><img src="./images/Portfolio/img6.jpg"
+                                alt="young & happy woman in orange sweater" width="360" height="300">
+                            <h2 class="project-names">Online Courses</h2>
+                            <p class="project-description">Marketing</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link" href=""><img src="./images/Portfolio/img7.jpg"
+                                alt="diferent celphones with instagram Stories" width="360" height="300">
+                            <h2 class="project-names">Instagram Stories Concept</h2>
+                            <p class="project-description">Design</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link" href=""><img src="./images/Portfolio/img8.jpg" alt="a woman with shopping net"
+                                width="360" height="300">
+                            <h2 class="project-names">Organic Food</h2>
+                            <p class="project-description">Web Site</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="link" href=""><img src="./images/Portfolio/img9.jpg"
+                                alt="a cup of Coffee with foamy milk" width="360" height="300">
+                            <h2 class="project-names">Fresh Coffee</h2>
+                            <p class="project-description">Web Site</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 
