--- a/portfolio.html
+++ b/portfolio.html
@@ -76,98 +76,107 @@
 
 
                 <ul class="list project-portfolio-styling">
-                    <li>
-                        <div class="projects-link-styling ">
-                            <a class="link" href="">
-                                <img src="./images/Portfolio/img1.jpg" alt="diferent banking pages" width="360"
-                                    height="300">
+                    <li class="list-project-item-styling">
+
+                        <a class="link" href="">
+                            <img src="./images/Portfolio/img1.jpg" alt="diferent banking pages" width="360"
+                                height="300">
+                            <div class="projects-link-styling ">
                                 <h2 class="project-names">Banking App Interface Concept</h2>
                                 <p class="project-description">App</p>
-                            </a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="projects-link-styling ">
+                            </div>
+                        </a>
 
-                            <a class="link" href=""><img src="./images/Portfolio/img2.jpg" alt="celphone and terminal"
-                                    width="360" height="300">
+                    </li>
+                    <li class="list-project-item-styling">
+
+                        <a class="link" href=""><img src="./images/Portfolio/img2.jpg" alt="celphone and terminal"
+                                width="360" height="300">
+                            <div class="projects-link-styling ">
+
                                 <h2 class="project-names">Cashless Payment</h2>
                                 <p class="project-description">Marketing</p>
-                            </a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="projects-link-styling ">
+                        </a>
+            </div>
+            </li>
+            <li class="list-project-item-styling">
 
-                            <a class="link" href=""><img src="./images/Portfolio/img3.jpg"
-                                    alt="meditation app in laptop and celphone" width="360" height="300">
-                                <h2 class="project-names">Meditation App</h2>
-                                <p class="project-description">App</p>
-                            </a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="projects-link-styling ">
+                <a class="link" href=""><img src="./images/Portfolio/img3.jpg"
+                        alt="meditation app in laptop and celphone" width="360" height="300">
+                    <div class="projects-link-styling ">
 
-                            <a class="link" href=""><img src="./images/Portfolio/img4.jpg" alt="taxi inside" width="360"
-                                    height="300">
-                                <h2 class="project-names">Taxi Service</h2>
-                                <p class="project-description">Marketing</p>
-                            </a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="projects-link-styling ">
+                        <h2 class="project-names">Meditation App</h2>
+                        <p class="project-description">App</p>
+                </a>
+                </div>
+            </li>
+            <li class="list-project-item-styling">
+                <div class="projects-link-styling ">
 
-                            <a class="link" href=""><img src="./images/Portfolio/img5.jpg" alt="graphics on celphones"
-                                    width="360" height="300">
-                                <h2 class="project-names">Screen Illustrations</h2>
-                                <p class="project-description">Design</p>
-                            </a>
+                    <a class="link" href=""><img src="./images/Portfolio/img4.jpg" alt="taxi inside" width="360"
+                            height="300">
+                        <h2 class="project-names">Taxi Service</h2>
+                        <p class="project-description">Marketing</p>
+                    </a>
+                </div>
+            </li>
+            <li class="list-project-item-styling">
 
-                        </div>
-                    </li>
-                    <li>
-                        <div class="projects-link-styling ">
+                <a class="link" href=""><img src="./images/Portfolio/img5.jpg" alt="graphics on celphones" width="360"
+                        height="300">
+                    <div class="projects-link-styling ">
 
-                            <a class="link" href=""><img src="./images/Portfolio/img6.jpg"
-                                    alt="young & happy woman in orange sweater" width="360" height="300">
-                                <h2 class="project-names">Online Courses</h2>
-                                <p class="project-description">Marketing</p>
-                            </a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="projects-link-styling ">
+                        <h2 class="project-names">Screen Illustrations</h2>
+                        <p class="project-description">Design</p>
+                </a>
 
-                            <a class="link" href=""><img src="./images/Portfolio/img7.jpg"
-                                    alt="diferent celphones with instagram Stories" width="360" height="300">
-                                <h2 class="project-names">Instagram Stories Concept</h2>
-                                <p class="project-description">Design</p>
-                            </a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="projects-link-styling ">
+                </div>
+            </li>
+            <li class="list-project-item-styling">
 
-                            <a class="link" href=""><img src="./images/Portfolio/img8.jpg"
-                                    alt="a woman with shopping net" width="360" height="300">
-                                <h2 class="project-names">Organic Food</h2>
-                                <p class="project-description">Web Site</p>
-                            </a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="projects-link-styling ">
+                <a class="link" href=""><img src="./images/Portfolio/img6.jpg"
+                        alt="young & happy woman in orange sweater" width="360" height="300">
+                    <div class="projects-link-styling ">
 
-                            <a class="link" href=""><img src="./images/Portfolio/img9.jpg"
-                                    alt="a cup of Coffee with foamy milk" width="360" height="300">
-                                <h2 class="project-names">Fresh Coffee</h2>
-                                <p class="project-description">Web Site</p>
-                            </a>
-                        </div>
-                    </li>
-                </ul>
+                        <h2 class="project-names">Online Courses</h2>
+                        <p class="project-description">Marketing</p>
+                </a>
+                </div>
+            </li>
+            <li class="list-project-item-styling">
+
+                <a class="link" href=""><img src="./images/Portfolio/img7.jpg"
+                        alt="diferent celphones with instagram Stories" width="360" height="300">
+                    <div class="projects-link-styling ">
+
+                        <h2 class="project-names">Instagram Stories Concept</h2>
+                        <p class="project-description">Design</p>
+                </a>
+                </div>
+            </li>
+            <li class="list-project-item-styling">
+
+                <a class="link" href=""><img src="./images/Portfolio/img8.jpg" alt="a woman with shopping net"
+                        width="360" height="300">
+
+                    <div class="projects-link-styling ">
+                        <h2 class="project-names">Organic Food</h2>
+                        <p class="project-description">Web Site</p>
+                </a>
+                </div>
+            </li>
+            <li class="list-project-item-styling">
+
+                <a class="link" href=""><img src="./images/Portfolio/img9.jpg" alt="a cup of Coffee with foamy milk"
+                        width="360" height="300">
+                    <div class="projects-link-styling ">
+
+                        <h2 class="project-names">Fresh Coffee</h2>
+                        <p class="project-description">Web Site</p>
+                </a>
+                </div>
+            </li>
+            </ul>
             </div>
         </section>
     </main>
