--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
                         </p>
                     </li>
 
-                    <li>
+                    <li class="section-two-li">
                         <h3 class="section-two">Punctuality</h3>
                         <p class="section-two-text">Bring the key message to the brand's audience for the best price
                             within the shortest possible time.</p>
                     </li>
 
-                    <li>
+                    <li class="section-two-li">
                         <h3 class="section-two">Diligence</h3>
                         <p class="section-two-text">Research and confirm brands that present the strongest digital
                             growth opportunities and minimize
@@ -89,7 +89,7 @@
                     </li>
 
 
-                    <li>
+                    <li class="section-two-li">
                         <h3 class="section-two">Technologies</h3>
                         <P class="section-two-text">Design practice focused on digital experiences. We bring forth a
                             deep passion for problem-solving.</P>
