--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </section>
 
         <!--section-4-->
-        <section class="section-four-bg section">
+        <section class="section-four-bg section-four-padding">
             <div class="container">
                 <h2 class="section-four-header">Our Team</h2>
                 <ul class="list section-four-list-styling">
