--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <main>
         <!--section-1-->
-        <section class="hero section">
+        <section class="hero section-one-padding">
             <div class="container">
                 <h1 class="section-one section-one-styling">Effective Solutions
                     for Your Business </h1>
@@ -61,7 +61,7 @@
         </section>
 
         <!--section-2-->
-        <section class="section">
+        <section class="section section-two-padding ">
             <div class="container">
                 <h2 class="visually-hidden">Lorem</h2>
 
