--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
                 <h2 class="section-three-header">What are we doing</h2>
 
                 <ul class="list section-tree-styling-ul">
-                    <li>
+                    <li class="section-tree-empty">
                         <a class="link" href=""><img src="./images/What_are_we_doing/image1.jpg" alt="iMac" width="360"
                                 height="300"></a>
                     </li>
-                    <li>
+                    <li class="section-tree-empty">
                         <a class="link" href=""><img src="./images/What_are_we_doing/image2.jpg" alt="iPhone leyers"
                                 width="360" height="300"></a>
                     </li>
-                    <li>
+                    <li class="section-tree-empty">
                         <a class="link" href=""><img src="./images/What_are_we_doing/image3.jpg" alt="iPhone"
                                 width="360" height="300"></a>
                     </li>
