--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <li class="section-four-text-bg">
                         <img src="./images/Our_Team/Mark_Guerrero.jpg"
                             alt="dark-haired man with facial hair in a blue business shirt" width="264" height="260">
-                        <div class="pictures-signatur">
+                        <div class="pictures-signature">
 
                             <h3 class="section-four-text">Mark Guerrero</h3>
                             <p class="section-four-positions">Product Designer</p>
