--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!--main navigation-->
     <header class="main-header">
         <div class="container menu-header header">
-            <nav class="menu-header-navigation">
+            <nav class="menu-header-navigation menu-header-padding">
                 <!--logo-->
                 <a class="logo link" href="./index.html">Web<span class="logo-span-header">Studio</span></a>
 
