--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="container menu-header header">
             <nav class="menu-header-navigation">
                 <!--logo-->
-                <a class="logo link " href="./index.html">Web<span
-                        class="logo-span-header link-paddind">Studio</span></a>
+                <a class="link-paddind logo link" href="./index.html">Web<span
+                        class="logo-span-header">Studio</span></a>
 
                 <ul class="list menu-header">
                     <li><a class="link main-navigation-links" href="./index.html">Studio</a></li>
