--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                         class="logo-span-header">Studio</span></a>
 
                 <ul class="list menu-header">
-                    <li><a class="link main-navigation-links" href="./index.html">Studio</a></li>
-                    <li><a class="link main-navigation-links" href="./portfolio.html">Portfolio</a></li>
-                    <li><a class="link main-navigation-links" href="">Contacts</a></li>
+                    <li><a class="link main-navigation-links link-paddind" href="./index.html">Studio</a></li>
+                    <li><a class="link main-navigation-links link-paddind" href="./portfolio.html">Portfolio</a></li>
+                    <li><a class="link main-navigation-links link-paddind" href="">Contacts</a></li>
                 </ul>
             </nav>
 
